<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@drawable/full_round_rect_shape_white"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:src="@mipmap/done"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/congratulation"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/green"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:text="@string/send_success"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1235"
            android:textColor="@color/red"
            android:id="@+id/txt_id_order"
            android:textStyle="bold" />
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:paddingEnd="26dp"
        android:paddingLeft="26dp"
        android:paddingRight="26dp"
        android:paddingStart="26dp"
        android:gravity="center"
        android:text="@string/send_success_"
        android:layout_marginBottom="10dp"
        android:textColor="@color/colorPrimary"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:weightSum="1"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp"

        android:layout_marginEnd="20dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:text="@string/ok"
            android:textColor="@android:color/white"
            android:background="@drawable/full_roundrectangle_blue"

            android:id="@+id/btn_accept"/>
    </LinearLayout>




</LinearLayout>