<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/frame"
    android:background="@color/colorblueBackground"
    tools:context="art4muslim.macbook.rahatycustomer.fragments.CartFragment">

    <TextView
        android:id="@+id/txt_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/txt_msg_cart"
        android:visibility="gone" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/list_item"
        android:layout_above="@+id/relative"
        android:layout_margin="16dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTooLightBlue"
        android:id="@+id/relative"
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/btn_go"

        android:padding="16dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/order_price"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deliver_price"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/txt_order_amount" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_delevering_amount" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:textColor="@color/colorText"
                android:text="@string/total_price" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_green_rect_shape"
                android:gravity="center"

                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:paddingRight="12dp"
                android:paddingLeft="12dp"
                android:paddingEnd="12dp"
                android:paddingStart="12dp"
                android:id="@+id/txt_total_amount"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish_order"
        android:id="@+id/btn_go"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"/>
</RelativeLayout>
