<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/frame"
    android:background="@color/colorblueBackground"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_alignParentTop="true"
        android:padding="10dp"
        android:id="@+id/relativeLayout">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15dp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/map_msg"
            />

    </RelativeLayout>

    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:scrollbars="vertical"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_below="@+id/relativeLayout"
        android:layout_above="@+id/linearLayout"
       />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/img_pin"
        android:src="@mipmap/pin"
        android:layout_centerVertical="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnOrder"
        android:id="@+id/linearLayout"
        android:gravity="center"
        android:visibility="gone"
        android:weightSum="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:gravity="center"
            android:layout_marginBottom="10dp"

            android:background="@android:drawable/picture_frame"
            android:orientation="horizontal">
            <ImageView

                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:src="@mipmap/cal"
                />

            <TextView
                android:id="@+id/txtDate"
                android:layout_width="wrap_content"

                android:gravity="center"
                android:layout_height="match_parent"


                android:hint="@string/txtDate"
                android:paddingLeft="6dp"
                android:paddingStart="6dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:gravity="center"
            android:layout_marginBottom="10dp"

            android:background="@android:drawable/picture_frame"
            android:orientation="horizontal">
            <ImageView

                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:src="@mipmap/time"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtTime"
                android:hint="@string/txtTime"
                android:paddingTop="10dp"
                android:gravity="center"
                android:paddingStart="6dp"
                android:paddingLeft="6dp"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimaryDark"
        android:text="@string/send_request"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true" />

</RelativeLayout>
