<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/frame1"
    android:background="@color/colorblueBackground">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:indeterminateTint="@color/colorAccent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout4"
        android:layout_marginTop="16dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTooLightBlue"
            android:id="@+id/relative"
            android:layout_marginBottom="20dp"
            android:layout_above="@+id/btn_go"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:id="@+id/txt_text"
                android:text="@string/order_price" />

        </RelativeLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:drawable/picture_frame"
            android:hint="@string/txt__orders"
            android:inputType="text"
            android:lineSpacingExtra="8sp"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="top"
            android:maxLines="35"
            android:minHeight="260dp"
            android:id="@+id/et_details"

            android:layout_marginBottom="16dp" />


    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish_order"
        android:id="@+id/btn_go"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"/>
</RelativeLayout>

